--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </tr>
         </thead>
         <tbody id="salaryTable">
-
+    <!--TABLE FROM JS-->
         </tbody>
     </table>
 </body>
