--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h2>Add Emplpoyee</h2>
 
     <form id="salaryForm">
-        <input id="firstNameInput" type="text" placeholder="First Name">
-        <input id="lastNameInput" type="text" placeholder="Last Name">
-        <input id="idNumberInput" type="text" placeholder="ID Number">
-        <input id="titleInput" type="text" placeholder="Title">
-        <input id="annualSalaryInput" type="text" placeholder="Annual Salary">
+        <input id="firstNameInput" type="text" placeholder="First Name" required>
+        <input id="lastNameInput" type="text" placeholder="Last Name" required>
+        <input id="idNumberInput" type="text" placeholder="ID Number" required>
+        <input id="titleInput" type="text" placeholder="Title" required>
+        <input id="annualSalaryInput" type="text" placeholder="Annual Salary" required>
         <input id="submitButton" type="submit" value="Submit">
     </form>
 
