created a funciton to extract and add all the annual salaries, added to the render function to display a number in the h2 for total monthly cost

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1>SALARY CALCULATOR</h1>
 
-    <h2>Add Emplpoyee</h2>
+    <h2>Add Employee</h2>
 
     <form id="salaryForm">
         <input id="firstNameInput" type="text" placeholder="First Name" required>
@@ -40,5 +40,7 @@
     <!--TABLE FROM JS-->
         </tbody>
     </table>
+
+    <h2 id="monthlyCost">Total Montly Cost:</h2>
 </body>
 </html>
