--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 
     <h1>SALARY CALCULATOR</h1>
 
-    <h2>Add Employee</h2>
+<div id="addForm">
+    <h2 id="header">Add Employee</h2>
 
     <form id="salaryForm">
-        <input id="firstNameInput" type="text" placeholder="First Name" >
-        <input id="lastNameInput" type="text" placeholder="Last Name" >
-        <input id="idNumberInput" type="text" placeholder="ID Number" >
-        <input id="titleInput" type="text" placeholder="Title" >
-        <input id="annualSalaryInput" type="text" placeholder="Annual Salary" >
+        <input id="firstNameInput" type="text" placeholder="First Name" required>
+        <input id="lastNameInput" type="text" placeholder="Last Name" required>
+        <input id="idNumberInput" type="text" placeholder="ID Number" required>
+        <input id="titleInput" type="text" placeholder="Title" required>
+        <input id="annualSalaryInput" type="text" placeholder="Annual Salary" required>
         <input id="submitButton" type="submit" value="Submit">
     </form>
-
+</div>
+<div class="tableClass">
     <h2>Employees</h2>
-
     <table id="salaryTable">
         <thead>
             <tr>
@@ -41,7 +42,9 @@
     <!--TABLE FROM JS-->
         </tbody>
     </table>
-
+</div>
+<div id="costClass">
     <h2 class="inline">Total Montly Cost:</h2><span class="inline" id="monthlyCost"></span>
+</div>
 </body>
 </html>
